# SIMD-48-Testing

./: jest.config.ts  package-lock.json  package.json  readme.md
Reports/: p256_report.json  subtlecrypto_report.json
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: create_pem_pubkey.ts.html  crypto_check_vector.ts.html  index.html  pubkey_helpers.ts.html  verify_vector_crypto_subtle.ts.html
coverage/lcov-report/src/utils/: create_pem_pubkey.ts.html  crypto_check_vector.ts.html  index.html
coverage/lcov-report/test_vectors/: generate_wycheproof.ts.html  index.html
secp256r1_verify/: Cargo.toml  index.html
secp256r1_verify/benches/: secp256r1_verify_bench.rs
secp256r1_verify/fuzz/: Cargo.toml  lib.rs
secp256r1_verify/fuzz/fuzz_targets/: fuzz_target_1.rs
secp256r1_verify/src/: bashstuff.txt  format_secp256r1_vector.rs  lib.rs  main.rs  secp256r1_instruction.rs  secp256r1_instruction_test.rs
secp256r1_verify/src/utils/: format_secp256r1_vector.rs  mod.rs  openssl_verify.rs  report.rs  secp256r1_instruction.rs  secp256r1_instruction_test.rs
src/: generate_random_mix.ts  generate_random_valid.ts  generate_wycheproof.ts  validate_vectors_crypto_subtle.ts
src/types/: vector.d.ts
src/utils/: create_pem_pubkey.test.ts  create_pem_pubkey.ts  crypto_check_vector.test.ts  crypto_check_vector.ts  pubkey_helpers.test.ts  pubkey_helpers.ts  read_jsonl_file.ts  verify_vector_crypto_subtle.test.ts  verify_vector_crypto_subtle.ts
test_vectors/: crypto_validate.ts  generate_random_valid.ts  generate_wycheproof.ts  validate_vectors_crypto_subtle.ts  vectors_random_valid.jsonl  vectors_wycheproof.jsonl
