[package]
name = "secp256r1_verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.14.0", features=["derive"]}
p256 = "0.10.1"
rand = "0.8.5"
solana-sdk = "1.17.5"
thiserror = "1.0.50"

