[package]
name = "secp256r1_verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.14.0", features=["derive"]}
hex = "0.4.3"
p256 = {version="0.10.1", "features"=["ecdsa"]}
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
criterion = "0.5.1"


[[bench]]
name = "secp256r1_verify_bench"
harness = false


